<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/shuoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shuoming"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/operation"
        />

    <TextView
        android:id="@+id/operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operation"
        android:layout_gravity="left"
        android:textColor="#FF0000"
        app:layout_constraintTop_toBottomOf="@+id/shuoming"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id="@+id/file_path"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:lines="3"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/operation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/open_Btn"
        app:layout_constraintBottom_toTopOf="@id/program_Btn"
        />

    <Button
        android:id="@+id/open_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open"
        android:textSize="20sp"
        android:layout_margin="5dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/operation"
        app:layout_constraintLeft_toRightOf="@id/file_path"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/program_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/burn"
        android:textSize="50dp"
        app:layout_constraintTop_toBottomOf="@id/open_Btn"
        />

    <TextView
        android:id="@+id/log_title"
        android:text="LOG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#014"
        app:layout_constraintTop_toBottomOf="@id/program_Btn"
        />
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/log_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="vertical"
        >
        <TextView
            android:id="@+id/log_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:text="log text"
            android:maxLines="35"
            android:layout_marginTop="3dp"
            />

    </ScrollView>



</android.support.constraint.ConstraintLayout>